--- a/config/local.yaml
+++ b/config/local.yaml
@@ -1,4 +1,4 @@
-env: "local" #local, dev, prod
+env: "dev" #local, dev, prod
 storage_path: "./storage/storage.db"
 http_server:
   address: "localhost:8082"
