changed deploy.yaml | setup go section

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -35,7 +35,7 @@ jobs:
       - name: Build app
         run: |
           go mod download
-          go build -o url-shortener ./cmd/url-shortener
+          go build -o url-shortener cmd/url-shortener/main.go
       - name: Deploy to VM
         run: |
           sudo apt-get install -y ssh rsync
